# git-ents

./: .dockerignore  .gitattributes  .gitignore  .gitvendors  Cargo.toml  Dockerfile  PROMPT.adoc  README.adoc  README.md  commit  created_at  display_name  key  license  principal  release-notes.md
.config/: committed.toml  (+8 more)
crates/backend-conformance/: Cargo.toml
crates/backend-conformance/src/: collector.rs  corpus.rs  fixture_oids.rs  lib.rs  object_store.rs  ref_store.rs  scratch_repo.rs  support.rs
crates/cli/ents-lens/: Cargo.toml
crates/cli/ents-lens/src/: compose.rs  document.rs  error.rs  lens.rs  lib.rs  render.rs  server.rs  signing.rs
crates/cli/ents-lens/tests/: lens.rs
crates/cli/ents-web/: Cargo.toml
crates/cli/ents-web/src/: asciidoc.rs  assets.rs  auth.rs  editor.rs  error.rs  form.rs  identity.rs  lib.rs  markdown.rs  planner.rs  render.rs  router.rs  session.rs  state.rs
crates/cli/ents-web/tests/: router.rs
crates/cli/git-ents/: Cargo.toml
crates/cli/git-ents/src/: agent_worker.rs  cli.rs  compose.rs  credentials.rs  error.rs  exe.rs  hook.rs  lib.rs  main.rs  mutate.rs  package.rs  plan_worker.rs  review_worker.rs  root.rs  sign.rs
crates/cli/git-ents/tests/: account.rs  agent.rs  agent_credentials.rs  cli_help.rs  comment.rs  config.rs  effect.rs  hosted_root.rs  issue.rs  layering.rs  login.rs  members.rs  reconcile.rs  redact.rs  review.rs  serve.rs  toolchain.rs  worktree_update.rs
crates/effect-dispatcher/: Cargo.toml
crates/effect-dispatcher/src/: job.rs  lib.rs  queue.rs
crates/effect-dispatcher/tests/: postgres_queue.rs
crates/ents-anchor/: Cargo.toml
crates/ents-anchor/src/: anchor.rs  error.rs  lib.rs  projection.rs  util.rs
crates/ents-anchor/tests/: retention.rs
crates/ents-receive/: Cargo.toml
crates/ents-receive/src/: error.rs  lib.rs  proposal.rs  receive.rs  reconcile.rs  sink.rs
crates/ents-receive/tests/: receive.rs
crates/forge/ents-forge/: Cargo.toml
crates/forge/ents-forge/src/: error.rs  lib.rs  present.rs
crates/forge/ents-forge/tests/: agent_sessions.rs  conversations.rs  disjointness.rs  round_trip.rs  unreadable.rs
crates/git-anchor/: Cargo.toml
crates/git-anchor/src/: lib.rs
crates/git-cache-proxy/: Cargo.toml
crates/git-cache-proxy/src/: lib.rs
crates/git-cache-proxy/tests/: proxy.rs
crates/git-comment/: Cargo.toml
crates/git-comment/src/: lib.rs
crates/git-effect/: Cargo.toml
crates/git-effect/src/: cache.rs  definition.rs  docker.rs  engine.rs  executor.rs  lib.rs  local.rs  results.rs  stream.rs  testutil.rs
crates/git-ents/: CHANGELOG.md  Cargo.toml
crates/git-ents-server/: CHANGELOG.md  Cargo.toml  Dockerfile
crates/git-ents-server/src/: asciidoc.rs  auth.rs  checks.rs  http.rs  lib.rs  main.rs  markdown.rs  native_git.rs  render.rs  verify.rs  web.rs
crates/git-ents-server/src/web/: assets.rs  component.rs  copy.js  debug.rs  git.rs  icons.rs  live.js  mod.rs  pages.rs  render.rs  style.css  write.rs
crates/git-ents-server/templates/: issues.html
crates/git-ents-server/tests/: hydrate.rs  native_protocol.rs  pre_receive.rs  server.rs  web_edit.rs
crates/git-ents/src/: account.rs  checks.rs  cli.rs  comments.rs  config.rs  debug_session.rs  error.rs  exe.rs  hook.rs  interactive.rs  issues.rs  lib.rs  main.rs  members.rs  mutate.rs  registry.rs  reviews.rs  revocations.rs  root.rs  signers.rs  testutil.rs
crates/git-ents/src/commands/: account.rs  comment.rs  effect.rs  members.rs  mod.rs  redact.rs  setup.rs  toolchain.rs
crates/git-ents/tests/: account.rs  cert_authority.rs  cli_help.rs  comment.rs  hosted_root.rs  reconcile.rs
crates/git-hydrate/: Cargo.toml
crates/git-hydrate/src/: config.rs  hydrate.rs  lib.rs  packed_refs.rs  pre_receive.rs  resolver.rs
crates/git-maintenance/: Cargo.toml
crates/git-maintenance/src/: cache.rs  collector.rs  gc.rs  lib.rs  lock.rs  schedule.rs
crates/git-maintenance/tests/: cache.rs  conformance.rs  gc.rs  lock_and_schedule.rs
crates/git-maintenance/tests/util/: mod.rs
crates/git-member/: Cargo.toml
crates/git-member/src/: lib.rs  members.rs  policy.rs  revocations.rs  testutil.rs
crates/git-member/tests/: cert_authority.rs
crates/git-protocol/: Cargo.toml
crates/git-protocol/src/: attestation.rs  corpus.rs  lib.rs  pack.rs  traits.rs  types.rs  walk.rs
crates/git-protocol/src/native/: advertise.rs  ingest.rs  mod.rs  negotiate.rs  pack_gen.rs  test_support.rs
crates/git-signed-push/: Cargo.toml
crates/git-signed-push/src/: lib.rs
crates/git-store/: Cargo.toml
crates/git-store/src/: component.rs  lib.rs  merge.rs  schema.rs
crates/git-toolchain/: Cargo.toml
crates/git-toolchain/src/: bake.rs  lib.rs
crates/gix-reachability/: Cargo.toml
crates/gix-reachability/src/: codec.rs  commitgraph.rs  engine.rs  lib.rs  walk.rs
crates/gix-reachability/tests/: equivalence.rs
crates/gix-ref-store/: Cargo.toml
crates/gix-ref-store/src/: edit.rs  loose.rs
crates/gix-ref-store/tests/: conformance.rs
crates/odb-baked/: Cargo.toml
crates/odb-baked/src/: lib.rs
crates/odb-baked/tests/: conformance.rs
crates/odb-files/: Cargo.toml
crates/odb-files/src/: lib.rs
crates/odb-files/tests/: conformance.rs
crates/odb-tiered/: Cargo.toml
crates/odb-tiered/src/: lib.rs  small_tier.rs
crates/odb-tiered/src/small_tier/: memory.rs
crates/odb-tiered/tests/: conformance.rs  tiering.rs
crates/odb-tigris/: Cargo.toml
crates/odb-tigris/src/: decode.rs  index_cache.rs  lib.rs  pack_writer.rs  registry.rs  transport.rs
crates/odb-tigris/src/registry/: memory.rs
crates/odb-tigris/src/transport/: fs.rs  s3.rs
crates/odb-tigris/tests/: conformance.rs  delta_chain.rs
crates/refstore-files/: Cargo.toml
crates/refstore-files/src/: lib.rs  watch.rs
crates/refstore-files/tests/: conformance.rs
crates/refstore-postgres/: Cargo.toml
crates/refstore-postgres/migrations/: 0001_init.sql
crates/refstore-postgres/src/: corpus.rs  lib.rs  notify.rs  pack_registry.rs  queue.rs  ref_store.rs  small_tier.rs
crates/refstore-postgres/tests/: conformance.rs  odb_ws5_conformance.rs
(+306 files in other folders)
