[workspace]
resolver = "3"
members = [
    "crates/git-anchor",
    "crates/git-comment",
    "crates/git-ents",
    "crates/git-ents-server",
    "crates/git-store",
]

[workspace.package]
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.dependencies]
arborium = { version = "2.18", default-features = false, features = [
    "lang-rust",
    "lang-toml",
    "lang-yaml",
    "lang-json",
    "lang-markdown",
    "lang-asciidoc",
    "lang-bash",
    "lang-javascript",
    "lang-typescript",
    "lang-python",
    "lang-c",
    "lang-cpp",
    "lang-go",
    "lang-html",
    "lang-css",
] }
acdc-parser = { git = "https://github.com/nlopes/acdc", rev = "6ae19bc2e6f0fa4254a3e9ebd1c3d2f6c7caafde" }
acdc-converters-core = { git = "https://github.com/nlopes/acdc", rev = "6ae19bc2e6f0fa4254a3e9ebd1c3d2f6c7caafde" }
acdc-converters-html = { git = "https://github.com/nlopes/acdc", rev = "6ae19bc2e6f0fa4254a3e9ebd1c3d2f6c7caafde", features = [
    "terminal",
] }
askama = "0.16"
axum = "0.8"
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
facet = { version = "0.50.0-rc.0", features = ["reflect"] }
getrandom = "0.4"
facet-git-tree = { git = "https://github.com/git-ents/facet-git-tree" }
form_urlencoded = "1"
git-anchor = { path = "crates/git-anchor" }
git-comment = { path = "crates/git-comment" }
git-store = { path = "crates/git-store" }
gix = "0.84"
gix-hash = { version = "0.25", features = ["sha1"] }
gix-object = "0.61"
gix-odb = "0.81"
gix-actor = "0.41"
gix-date = "0.15"
iddqd = "0.4"
maud = { version = "0.27", features = ["axum"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rstest = "0.26"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "io-util",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }

# These lint configurations were originally pulled from [Evan Schwartz][1].
# [1]: https://emschwartz.me/your-clippy-config-should-be-stricter/
[workspace.lints.clippy]

# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Optional - see post for caveats
expect_used = "warn"
arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
