[package]
name = "backend-conformance"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
git-store = { workspace = true, features = ["test-support"] }
gix-hash = { workspace = true }
gix-object = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
