[package]
name = "backend-conformance"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
git-protocol = { workspace = true }
git-reachability = { workspace = true }
git-store = { workspace = true, features = ["test-support"] }
gix-hash = { workspace = true }
gix-object = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
odb-files = { workspace = true }
refstore-files = { workspace = true }

[lints]
workspace = true
