[package]
name = "ents-anchor"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ents-model = { path = "../ents-model" }
facet-git-tree = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
