[package]
name = "ents-receive"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ents-gate = { workspace = true }
ents-model = { workspace = true }
ents-query = { workspace = true }
facet-git-tree = { workspace = true }
gix = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
gix-ref-store = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ents-testutil = { workspace = true }
facet = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
