[package]
name = "git-anchor"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
