[package]
name = "git-cache-proxy"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
git-backend = { workspace = true }
git-ents-core = { workspace = true }
git-member = { workspace = true }
git-protocol = { workspace = true }
gix-reachability = { workspace = true }
git-store = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
odb-files = { workspace = true }
refstore-files = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
