[package]
name = "git-comment"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
git-anchor = { workspace = true }
git-store = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
