[package]
name = "git-effect"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
git-store = { workspace = true }
git-toolchain = { workspace = true }
gix-hash = { workspace = true }
portable-pty = "0.9.0"
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }

[lints]
workspace = true
