[package]
name = "git-effect"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
git-backend = { workspace = true }
git-store = { workspace = true }
git-toolchain = { workspace = true }
gix-hash = { workspace = true }
portable-pty = "0.9.0"
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
