[package]
name = "git-ents-server"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-ents = { path = "../git-ents" }
acdc-parser = { workspace = true }
acdc-converters-core = { workspace = true }
acdc-converters-html = { workspace = true }
arborium = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
clap_mangen = { workspace = true }
facet = { workspace = true }
getrandom = { workspace = true }
gix-actor = { workspace = true }
gix-date = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
maud = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
