[package]
name = "git-ents-server"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-ents-core = { workspace = true }
acdc-parser = { workspace = true }
askama = { workspace = true }
acdc-converters-core = { workspace = true }
acdc-converters-html = { workspace = true }
arborium = { workspace = true }
axum = { workspace = true, features = ["ws"] }
facet = { workspace = true }
figue = { workspace = true }
form_urlencoded = { workspace = true }
getrandom = { workspace = true }
git-anchor = { workspace = true }
git-comment = { workspace = true }
git-store = { workspace = true }
gix-actor = { workspace = true }
gix-date = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
maud = { workspace = true }
pulldown-cmark = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
portable-pty = "0.9.0"

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
