[package]
name = "git-ents-server"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-ents-core = { workspace = true }
acdc-parser = { workspace = true }
askama = { workspace = true }
acdc-converters-core = { workspace = true }
acdc-converters-html = { workspace = true }
acdc-converters-terminal = { workspace = true }
arborium = { workspace = true }
axum = { workspace = true, features = ["ws"] }
facet = { workspace = true }
figue = { workspace = true }
form_urlencoded = { workspace = true }
getrandom = { workspace = true }
git-anchor = { workspace = true }
git-backend = { workspace = true }
git-comment = { workspace = true }
git-effect = { workspace = true }
git-hydrate = { workspace = true }
git-member = { workspace = true }
git-protocol = { workspace = true }
git-reachability = { workspace = true }
git-signed-push = { workspace = true }
git-store = { workspace = true }
git-toolchain = { workspace = true }
gix-actor = { workspace = true }
gix-date = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
maud = { workspace = true }
odb-files = { workspace = true }
odb-tigris = { workspace = true }
pulldown-cmark = { workspace = true }
refstore-files = { workspace = true }
refstore-postgres = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
portable-pty = "0.9.0"

[dev-dependencies]
backend-conformance = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
