[package]
name = "git-ents"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
facet = { workspace = true }
git-store = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
