[package]
name = "git-ents"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
crossterm = "0.29.0"
facet = { workspace = true }
form_urlencoded.workspace = true
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
git-store = { workspace = true }
iddqd = { workspace = true }
inquire = { version = "0.9.4", default-features = false, features = ["crossterm"] }
signal-hook = { version = "0.3", features = ["iterator"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
ureq = "3.3.0"

[lints]
workspace = true
