[package]
name = "git-hydrate"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
git-ents-core = { workspace = true }
git-member = { workspace = true }
git-protocol = { workspace = true }
git-reachability = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
odb-tigris = { workspace = true }
refstore-postgres = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
backend-conformance = { workspace = true }
odb-files = { workspace = true }
refstore-files = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
