[package]
name = "git-maintenance"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
backend-conformance = { workspace = true }
effect-dispatcher = { workspace = true }
git-backend = { workspace = true }
git-protocol = { workspace = true }
git-reachability = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
gix-pack = { workspace = true }
odb-files = { workspace = true }
odb-tigris = { workspace = true }
refstore-files = { workspace = true }
refstore-postgres = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }

[lints]
workspace = true
