[package]
name = "git-protocol"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
git-ents-core = { workspace = true }
git-member = { workspace = true }
git-signed-push = { workspace = true }
gix = { workspace = true }
gix-actor = { workspace = true }
gix-date = { workspace = true }
gix-features = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
gix-pack = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
odb-files = { workspace = true }
refstore-files = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
