[package]
name = "git-signed-push"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-ents-core = { workspace = true }
git-member = { workspace = true }
git-store = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
