[package]
name = "git-store"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
facet-git-tree = { workspace = true }
git-backend = { workspace = true }
gix = { workspace = true }
refstore-files = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Shared git test fixtures for the workspace's test suites; enable from a
# downstream crate's dev-dependencies.
test-support = ["dep:tempfile"]

[lints]
workspace = true
