[package]
name = "git-toolchain"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
facet-git-tree = { workspace = true }
git-store = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }

[lints]
workspace = true
