[package]
name = "git-toolchain"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
facet = { workspace = true }
facet-git-tree = { workspace = true }
git-store = { workspace = true }
gix = { workspace = true }
gix-pack = { workspace = true }
rayon = { workspace = true }
semver = { workspace = true }
spdx = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
