[package]
name = "gix-reachability"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
odb-tigris = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
gix-actor = { workspace = true }
gix-date = { workspace = true }
odb-files = { workspace = true }
refstore-files = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
