[package]
name = "gix-ref-store"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
gix = { workspace = true }
gix-hash = { workspace = true }
gix-lock = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
