[package]
name = "odb-baked"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }

[dev-dependencies]
backend-conformance = { workspace = true }
git-store = { workspace = true, features = ["test-support"] }
odb-files = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
