[package]
name = "odb-files"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
gix = { workspace = true }
gix-hash = { workspace = true }
gix-pack = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
git-store = { workspace = true, features = ["test-support"] }
gix-object = { workspace = true }

[lints]
workspace = true
