[package]
name = "odb-tiered"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
gix-features = { workspace = true, features = ["progress"] }
gix-hash = { workspace = true }
gix-object = { workspace = true }
gix-pack = { workspace = true }
odb-tigris = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
backend-conformance = { workspace = true }

[lints]
workspace = true
