[package]
name = "refstore-postgres"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
gix-hash = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }

[dev-dependencies]
backend-conformance = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
