[package]
name = "refstore-postgres"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git-backend = { workspace = true }
git-protocol = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
odb-tiered = { workspace = true }
odb-tigris = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
backend-conformance = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
