[package]
name = "ents-lens"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ents-anchor = { workspace = true }
ents-forge = { workspace = true }
ents-model = { workspace = true }
ents-receive = { workspace = true }
facet-git-tree = { workspace = true }
gix = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
gix-ref-store = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde = "1"
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ents-testutil = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
