[package]
name = "ents-forge"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ents-anchor = { workspace = true }
ents-model = { workspace = true }
ents-receive = { workspace = true }
facet = { workspace = true }
facet-git-tree = { workspace = true }
figue = { workspace = true }
gix = { workspace = true }
gix-hash = { workspace = true }
gix-object = { workspace = true }
gix-ref-store = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ents-testutil = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
